add fox question

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                     <h4>My favorite color is black.</h4>
                     <h4>My favorite food is steak.</h4>
                     <h4>If I could be any animal, I would be A/AN dog.</h4>
+                    <p>What does the fox say</p>
             </div>
           </body>
         </html>
